# http_client_weather

./: CMakeLists.txt
src/headers/: application.hpp  client.hpp  network.hpp
src/sources/: application.cpp  client.cpp  main.cpp  network.cpp
